...
    Profile(),
  ];

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key('basePageScaffold'),
      body: _pages[_currentIndex],
      bottomNavigationBar: Container(
        decoration: BoxDecoration(
          boxShadow: [
            BoxShadow(
              color: Colors.black.withOpacity(0.1),
...
