...
                      ),
                    ),
                    SizedBox(height: 200),
                    SizedBox(
                      width: 200,
                      child: ElevatedButton(
                        key: Key('welcomeLoginButton'),
                        onPressed: () {
                          Navigator.pushNamed(context, '/login');
                        },
                        style: ElevatedButton.styleFrom(
                          backgroundColor: Colors.green[500],
                          foregroundColor: Colors.white,
...
